tests/e2e/fail/extern_callable_type.ep
# COMPILE_ERROR: unsupported ABI type fun(i64): i64
extern "kernel32.dll" fun consume(callback: fun(i64): i64): i64

fun main(): void {
}
